--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sbla.wear.talkclient">
 
-    <application android:allowBackup="true"
-        android:label="TalkClient">
-
-
-    </application>
+    <application android:allowBackup="true"/>
 
 </manifest>
